<resources>
    <string name="app_name">Movie Kotlist</string>

    <!-- Screen titles -->
    <string name="title_all_movies">Movies</string>
    <string name="title_add_movie">Add Movie</string>
    <string name="title_edit_movie">Edit Movie</string>
    <string name="title_movie_details">Movie Details</string>
    <string name="title_favorite_movies">Favorite Movies</string>
    <string name="placeholder_movie_title">Movie title</string>
    <string name="placeholder_movie_description">Movie description</string>
    <string name="title_omdb">Open Movie Database</string>

    <!-- Actions / buttons -->
    <string name="action_pick_image">Pick Image</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_finish">Finish</string>
    <string name="action_save">Save</string>
    <string name="action_back">Back</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_add_to_favorites">Add to Favorites</string>
    <string name="action_remove_from_favorites">Remove from Favorites</string>
    <string name="action_omdb">OMDB</string>
    <string name="search_button">Search</string>
    <string name="action_add_to_my_list">Add to My List</string>

    <!-- Hints -->
    <string name="hint_movie_title">Enter movie title</string>
    <string name="hint_movie_description">Enter movie description</string>
    <string name="hint_pick_date">Pick date</string>
    <string name="hint_score">Score (1–10)</string>
    <string name="hint_year">Year</string>

    <!-- Formats -->
    <string name="watched_format">Watched: %1$s</string>
    <string name="score_format">Score: %1$d/10</string>

    <!-- Dialogs -->
    <string name="dialog_delete_title">Delete movie</string>
    <string name="dialog_delete_message">Are you sure you want to delete "%1$s"?</string>

    <!-- Errors / toasts -->
    <string name="error_title_required">Title is required</string>
    <string name="error_watched_date_future">Watched date cannot be in the future</string>
    <string name="error_score_range">Score must be between 1 and 10</string>
    <string name="error_duplicate_title">A movie with this title already exists.</string>
    <string name="error_invalid_movie_id">Invalid movie id.</string>
    <string name="toast_movie_updated">Movie updated.</string>
    <string name="empty_favorites_message">No favorite movies yet. Mark movies as favorites by clicking the heart icon!</string>
    <string name="empty_movies_message">No movies added yet.\nTap the + button to add your first movie!</string>
    <string name="loading_omdb_message">Waiting for OMDB response...</string>
    <string name="empty_omdb_message">Search for a movie title</string>
    <string name="omdb_movie_details_not_loaded">Movie details not loaded yet</string>
    <string name="omdb_movie_added">The movie was added to your list</string>

    <!-- Accessibility -->
    <string name="cd_add_movie">Add movie</string>
    <string name="cd_movie_image">Movie image</string>
    <string name="cd_favorite_indicator">Favorite indicator</string>
</resources>
